--- a/.github/workflows/sonarscanning.yml
+++ b/.github/workflows/sonarscanning.yml
@@ -17,6 +17,19 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: Restore dependencies
+        run: dotnet restore
+        working-directory: ./DemoWeb/DemoWeb
+      - name: Build
+        run: dotnet build --no-restore
+        working-directory: ./DemoWeb/DemoWeb
+      - name: Test
+        run: dotnet test --no-build --verbosity normal
+        working-directory: ./DemoWeb/DemoWeb
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
         with:
