--- a/.github/workflows/sonarscanning.yml
+++ b/.github/workflows/sonarscanning.yml
@@ -23,13 +23,13 @@ jobs:
           dotnet-version: 8.0.x
       - name: Restore dependencies
         run: dotnet restore
-        working-directory: ./DemoWeb/DemoWeb
+        working-directory: ./DemoWeb
       - name: Build
         run: dotnet build --no-restore
-        working-directory: ./DemoWeb/DemoWeb
+        working-directory: ./DemoWeb
       - name: Test
         run: dotnet test --no-build --verbosity normal
-        working-directory: ./DemoWeb/DemoWeb
+        working-directory: ./DemoWeb
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
         with:
