--- a/.github/workflows/sonarscanning.yml
+++ b/.github/workflows/sonarscanning.yml
@@ -21,15 +21,6 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
-      - name: Restore dependencies
-        run: dotnet restore
-        working-directory: ./DemoWeb
-      - name: Build
-        run: dotnet build --no-restore
-        working-directory: ./DemoWeb
-      - name: Test
-        run: dotnet test --no-build --verbosity normal
-        working-directory: ./DemoWeb
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
         with:
@@ -49,6 +40,15 @@ jobs:
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+      - name: Restore dependencies
+        run: dotnet restore
+        working-directory: ./DemoWeb
+      - name: Build
+        run: dotnet build **/*/DemoWeb.sln --no-restore
+        working-directory: ./DemoWeb
+      - name: Test
+        run: dotnet test --no-build --verbosity normal
+        working-directory: ./DemoWeb
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
