--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,12 +21,12 @@ jobs:
         dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: ./DemoWeb/DemoWeb
+      working-directory: ./DemoWeb
     - name: Build
       run: dotnet build --no-restore
-      working-directory: ./DemoWeb/DemoWeb
+      working-directory: ./DemoWeb
     - name: Test
       run: dotnet test --no-build --verbosity normal
-      working-directory: ./DemoWeb/DemoWeb
+      working-directory: ./DemoWeb
 
   #Add code scanning here...
